# RustArbStrategy

./: .gitignore  Cargo.toml
src/: main.rs
src/coins/: coin.rs  mod.rs
src/exchanges/: coinbase_client.rs  kraken_client.rs  mod.rs
src/exchanges/dex/: base_dex.rs  curve.rs  mod.rs  quickswap_v2.rs  sushi_swap.rs  uniswap_v2_base.rs  uniswap_v3_client.rs
src/exchanges/dex/contracts/: curve_aave.json  curve_quoter.json
src/flash_loan/: loan.rs  mod.rs
src/graph/: graph_builder.rs  mod.rs  path.rs
src/models/: asset.rs  mod.rs  price.rs
src/utils/: http.rs  mod.rs  traits.rs
