[package]
name = "RustArbitrageProject"
path = "src/main.rs"
version = "0.1.0"
edition = "2021"

[dependencies]
reqwest = { version = "0.11", features = ["json"] }
tokio = { version = "1", features = ["full"] }
dotenv = "0.15.0"
dotenv_codegen = "0.15.0"
sha2 = "0.10"
hmac = "0.12.1"
hex = "0.4.3"
base64 = "0.21.0"
once_cell = "1.17.1"
serde_json = "1.0.64"
serde = { version = "1.0.130", features = ["derive"] }
ethers = { version = "2.0.2", features = ["rustls"] }
futures = "0.3.28"
memoize = "0.4.0"
[dependencies.uuid]
version = "1.3.0"
features = [
    "v4",                # Lets you generate random UUIDs
    "fast-rng",          # Use a faster (but still sufficiently random) RNG
    "macro-diagnostics", # Enable better diagnostics for compile-time UUIDs
]